--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "url": "https://github.com/sergei-dyshel/prettier-config/issues"
   },
   "homepage": "https://github.com/sergei-dyshel/prettier-config",
+  "directories": {
+    "bin": "./bin"
+  },
   "peerDependencies": {
     "prettier": "^3.1.1",
-    "prettier-plugin-jsdoc": "^1.3.0"
+    "prettier-plugin-jsdoc": "^1.3.0",
+    "prettier-plugin-organize-imports": "^3.2.3"
   }
 }
