--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@sergei-dyshel/prettier-config",
   "version": "1.0.0",
   "description": "Personal Prettier config",
-  "main": "index.js",
   "scripts": {},
   "repository": {
     "type": "git",
@@ -17,9 +16,12 @@
   "directories": {
     "bin": "./bin"
   },
+  "dependencies": {
+    "prettier-plugin-jsdoc": "^1.3.0"
+  },
   "peerDependencies": {
     "prettier": "^3.1.1",
-    "prettier-plugin-jsdoc": "^1.3.0",
+    "prettier-plugin-jsdoc": "$pretter-plugin-jsdoc",
     "prettier-plugin-organize-imports": "^3.2.3"
   }
 }
