Replace format npm scripts by Justfile

--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "@sergei-dyshel/prettier-config",
   "version": "1.0.0",
   "description": "Personal Prettier config",
-  "scripts": {
-    "format-check": "qcfg-prettier",
-    "format-write": "qcfg-prettier-write"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sergei-dyshel/prettier-config.git"
